# rife-ncnn-vulkan-python

./: .gitattributes  .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: CI.yml  ci.yml  release.yml
models/rife/: contextnet.param  flownet.param  fusionnet.param
models/rife-HD/: contextnet.param  fusionnet.param
models/rife-anime/: flownet.param
models/rife-v2/: flownet.param
models/rife-v2.4/: contextnet.param  fusionnet.param
models/rife-v3.0/: contextnet.param  flownet.param
rife_ncnn_vulkan_python/: CMakeLists.txt  RIFEWrapper.h  rife.i  rife_ncnn_vulkan.py  rife_wrapped.cpp  rife_wrapped.h
src/: CMakeLists.txt  RIFEWrapper.cpp  rife.i  rife_ncnn_vulkan.py
tests/: test_interpolation.py  test_upscale.py
