[metadata]
name = rife-ncnn-vulkan-python
version = 1.2.1
author = ArchieMeng
author_email = archiemeng@protonmail.com
maintainer = K4YT3X
maintainer_email = i@k4yt3x.com
license = MIT
license_file = LICENSE
description = A Python FFI of nihui/rife-ncnn-vulkan achieved with SWIG
url = https://github.com/media2x/rife-ncnn-vulkan-python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords =
    rife
    ncnn
    vulkan
    swig

[options]
packages = find:
install_requires = pillow
python_requires = >=3.6
